styles.css
/* Variables */
:root {
  /* Font family */
  --font-family: system-ui, sans-serif;
  /* Sidebar */
  --sidebar-font-color: white;
  --topbar-content-color: black;
  --sidebar-logo-font: clamp(1.4rem, 0.7rem + 0.7vw, 2rem);
  --side-bar-button-size: clamp(1rem, 0.5rem + 0.3vw, 1.5rem);
  --project-header-name-size: clamp(0.8rem, 0.3em + 0.1vw, 1.3rem);
  --project-body-font: clamp(0.7rem, 0.4em + 0.3vw, 1rem);
  --project-body-font-small: clamp(0.6rem, 0.3em + 0.3vw, 0.8rem);
}

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* Remove bullet points and innate padding from lists */
ul {
  list-style-type: none;
  padding: 0;
}


/* Overall grid for content, sidebar, and topbar */
.container {
    display: grid;
    grid-template-columns: minmax(215px, 1fr) 4fr;
    grid-template-rows: 1fr 5fr;
}


/* Sidebar styling */
.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    background-color: #1992d4;
    padding: 1em;
}

.logo {
  display: flex;
  align-items: center;
  font-size: var(--sidebar-logo-font);
  color: var(--sidebar-font-color);
  font-family: var(--font-family);
  font-weight: bold;
}

.logo > img {
  width: 1.6em;
  height: auto;
  margin-right: 0.3em;
  filter: invert(100%);
}

.top-buttons, .bottom-buttons {
  font-family: var(--font-family);
  font-size: var(--side-bar-button-size);
  color: var(--sidebar-font-color);
  font-weight: bold;
  line-height: 220%;
}

li > img {
  width: 1.1em;
  height: auto;
  filter: invert(100%);
  margin-left: 0.7em;
  margin-right: 1em;
  
}

li:hover > img{
  width: 1.2em;
  height: auto;
}

li {
  display: flex;
}

.top-buttons {
  margin-top: 2.5em;
  margin-bottom: 2.5em;
}

/* Topbar styling */
.topbar {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  position: relative;
  z-index: 10;
  box-shadow: 5px 5px 3px #cfd4db;
}

.name {
  font-family: var(--font-family);
  font-size: var(--project-header-name-size);
  color: var(--topbar-content-color);
  font-weight: bold;
}

.first-row > img[src$=".svg"] {
  width: 1.2em;
  height: auto;
}

.first-row > img[src$="y.svg"] {
  position: relative;
  right: 1em;
}

.profile-crop {
  width: 2rem;
  height: 2rem;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
}

.profile-crop-two {
  width: 4em;
  height: 4em;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
  margin-left: 2em;
  margin-right: 1em;
}

.profile-crop > img[src$=".jpg"],
.profile-crop-two > img[src$=".jpg"] {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

input {
  background-color: #e2e8f0;
  border-style: none;
  border-radius: 15px;
  width: 30em;
  margin-right: 4em;
}

.greeting {
  font-family: var(--font-family);
  font-size: var(--project-body-font);
  font-weight: bold;
}

.username {
  font-family: var(--font-family);
  font-size: var(--sidebar-logo-font);
  font-weight: bold;
}

button {
  border-style: none;
  background-color: #1992d4;
  color: white;
  font-family: var(--font-family);
  font-weight: bold;
  font-size: var(--project-header-name-size);
  border-radius: 15px;
  width: 6em;
  height: 2.5em;
  margin-right: 1.5em;
}

button:hover {
  background-color: #157cb4;
}



.name-card {
  margin-right: 11em;
  line-height: normal;
}

.first-row {
  display: flex;
  margin-right: 1em;
  align-items: flex-start;
  align-items: center;
  margin-top: 0.8em;
  margin-left: 3em;
  margin-bottom: 1.5em;
}

.first-row > :nth-child(n + 3) {
  margin-right: 1.5em;
}

.second-row {
  display: flex;
  align-items: flex-start;
  align-items: center;
}


/* Content styling */
.content {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  display: grid;
  grid-template-columns: 2.5fr 1fr;
  gap: 1em;

  background-color: #e2e8f0;
}

span {
  font-family: var(--font-family);
  font-weight: bold;
  font-size: var(--side-bar-button-size);
}

p {
  max-width: 33ch;
}

.header {
  font-family: var(--font-family);
  font-size: var(--project-header-name-size);
  font-weight: bold;
}

.body {
  font-family: var(--font-family);
  font-size: var(--project-body-font);
}

.card {
  padding-top: 1.5em;
  padding-left: 1em;
  background-color: white;
  min-width: 275px;
  min-height: 165px;
  border-radius: 8px;
  box-shadow: 3px 3px 3px #cfd4db;
  border-left: 7px solid #f0b429;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.project-buttons {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 1.5em;
}

.project-buttons > img {
  width: 1.1em;
  height: auto;
  margin-right: 1em;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
  grid-column: 1 / 2;
  gap: 1em;
  margin-left: 1em;
  margin-top: 3em;
}

.card > span {
  position: relative;
  top: -37%;
  left: -7%;
}

.right-column {
  grid-column: 2 / 3;
}

.announcement {
  background-color: white;
  width: 220px;
  min-height: 90px;
  box-shadow: 3px 3px 3px #cfd4db;
  position: relative;
  padding-left: 1em;
}

.announcement p:first-child {
  font-family: var(--font-family);
  font-weight: bold;
  font-size: var(--project-body-font);
}

.announcement p:last-child {
  font-family: var(--font-family);
  font-size: var(--project-body-font-small);
}

.announcements .announcement:nth-child(5n + 2) {
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
  padding-top: 1.25em;
}

.announcements .announcement:last-child {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  padding-top: 0.5em;
  padding-bottom: 1.5em;
}

.announcements .announcement:nth-child(5n + 3) {
  padding-top: 1em;
}

.announcements .announcement:not(:last-child)::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 10%;
  width: 80%;
  height: 1px;
  background-color: #cfd4db;
}

.announcements {
  margin-top: 1.5em
}

.trend {
  background-color: white;
  width: 220px;
  min-height: 50px;
  box-shadow: 3px 3px 3px #cfd4db;
  padding-left: 1em;
  font-family: var(--font-family);
  font-size: var(--project-body-font-small);
  display: flex;
  padding-top: 1.5em;
  padding-left: 1.5em;
}

.trending {
  margin-top: 0.5em;
}

.trend > .profile-crop {
  margin-right: 1em;
}

.trending .trend:nth-child(5n + 2) {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  
}

.trending .trend:last-child {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  padding-bottom: 1.5em;
}

